service.yaml
apiVersion: v1
kind: Service
metadata:
  name: localstack-svc
spec:
  selector:
    type: localstack-demo
  ports:
    - name: edge
      port: 4566
      nodePort: 30566
    - name: sqs
      port: 4576
      nodePort: 30576
    - name: ui
      port: 32000
      nodePort: 32000      
  type: NodePort
